# python_ghost_cursor

./: pyproject.toml
tests/: test_playwright_sync.py
