[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = "Python implementation of Xetera/ghost-cursor"
license = "MIT"
name = "python-ghost-cursor"
packages = [{include = "python_ghost_cursor"}]
readme = "README.md"
version = "0.1.3"

[tool.poetry.dependencies]
bezier = ">=2024.6.20"
numpy = ">=2.0.0"
python = ">=3.10"
scipy = "^1.10.1"

[tool.poetry.group.dev.dependencies]
playwright = "^1.32.0"
pytest = "^7.2.2"
pytest-playwright = "^0.3.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
